--- a/portfoliosite/src/index.css
+++ b/portfoliosite/src/index.css
@@ -10,7 +10,7 @@
   text-indigo-500 hover:text-white
     hover:rounded-xl rounded-3xl
     transition-all duration-300 ease-linear
-    cursor-pointer shadow-md shadow-indigo-600;
+    cursor-pointer shadow-sm shadow-white;
   }
 
   .sidebar-tooltip {
