--- a/portfoliosite/src/index.css
+++ b/portfoliosite/src/index.css
@@ -13,7 +13,7 @@
     cursor-pointer shadow-sm shadow-white;
   }
 
-  .sidebar-tooltip {
+  .sidebar-text {
     @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md
     text-white bg-gray-900 
     text-xs font-bold 
