--- a/portfoliosite/src/index.css
+++ b/portfoliosite/src/index.css
@@ -25,4 +25,14 @@
     border border-gray-200 dark:border-gray-800 rounded-full
     mx-2;
   }
+
+  .project_card {
+    @apply relative flex flex-col items-center justify-center
+    w-80 h-96 p-4 m-4
+    bg-white dark:bg-gray-800 hover:bg-indigo-600
+    rounded-xl shadow-lg
+    transition-all duration-300 ease-linear
+    cursor-pointer;
+  }
+
 }
