--- a/portfoliosite/src/index.css
+++ b/portfoliosite/src/index.css
@@ -29,7 +29,7 @@
   .project_card {
     @apply relative flex flex-col items-center justify-center
     w-80 h-96 p-4 m-4
-    bg-white dark:bg-gray-800 hover:bg-indigo-600
+    bg-white dark:bg-gray-800 hover:bg-indigo-600 dark:hover:bg-indigo-600
     rounded-xl shadow-lg
     transition-all duration-300 ease-linear
     cursor-pointer;
